cmake_minimum_required(VERSION 3.23)
project(chap3)

set(CMAKE_CXX_STANDARD 11)

add_executable(chap3 main.cpp)
add_executable(Chap3-3Ex Chap3-3Ex.cpp)
add_executable(Ex3-10 Ex3-10.cpp)
add_executable(chap3ex chap3ex.cpp)
add_executable(Ex3-12 Ex3-12.cpp)
add_executable(Ex3-14 Ex3-14.cpp)
add_executable(Ex3-15 Ex3-15.cpp)
add_executable(Ex3-13 Ex3-13.cpp)
add_executable(Ex3-17 Ex3-17.cpp)
add_executable(Ex3-20 Ex3-20.cpp)
add_executable(Ex3-21 Ex3-21.cpp)
add_executable(Ex3-22 Ex3-22.cpp)
add_executable(Ex3-23 Ex3-23.cpp)
add_executable(Ex3-24 Ex3-24.cpp)
add_executable(Ex3-25 Ex3-25.cpp)
add_executable(Ex3-28 Ex3-28.cpp)
add_executable(Ex3-31 Ex3-31.cpp)
add_executable(Ex3-33 Ex3-33.cpp)