cmake_minimum_required(VERSION 3.23)
project(chap4)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Ex4-1
        Ex4-1.cpp)

add_executable(Ex4-2 Ex4-2.cpp)
add_executable(Ex4-4 Ex4-4.cpp)
add_executable(Ex4-6 Ex4-6.cpp)
add_executable(Ex4-10 Ex4-10.cpp)
add_executable(Ex4-13 Ex4-13.cpp)
add_executable(Ex4-21 Ex4-21.cpp)
add_executable(Ex4-22 Ex4-22.cpp)
add_executable(Ex4-23 Ex4-23.cpp)
add_executable(Ex4-28 Ex4-28.cpp)
add_executable(Ex4-29 Ex4-29.cpp)
add_executable(Ex4-31 Ex4-31.cpp)