cmake_minimum_required(VERSION 3.23)
project(chap5)

set(CMAKE_CXX_STANDARD 11)


add_executable(Ex5-3 Ex5-3.cpp)
add_executable(Ex5-5 Ex5-5.cpp)
add_executable(Ex5-9 Ex5-9.cpp)
add_executable(Ex5-10 Ex5-10.cpp)
add_executable(Ex5-11 Ex5-11.cpp)
add_executable(Ex5-12 Ex5-12.cpp)
add_executable(Ex5-14 Ex5-14.cpp)
add_executable(Ex5-17 Ex5-17.cpp)
add_executable(Ex5-19 Ex5-19.cpp)
add_executable(Ex5-20 Ex5-20.cpp)
add_executable(Ex5-21 Ex5-21.cpp)
add_executable(Ex5-23 Ex5-23.cpp)